--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "electron-serve": "^1.3.0",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "styled-components": "^6.1.8",
+    "styled-normalize": "^8.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.16",
