--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "electron-serve": "^1.3.0",
     "electron-store": "^8.1.0",
+    "lodash": "^4.17.21",
     "styled-components": "^6.1.8",
     "styled-normalize": "^8.1.1"
   },
