增加 为未完成的指令预留result，防止result的index与command不匹配

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "scripts": {
     "dev": "nextron",
     "build": "nextron build",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "build:mac": "nextron build --mac",
+    "build:mac:universal": "nextron build --mac --universal",
+    "build:linux": "nextron build --linux",
+    "build:win32": "nextron build --win --ia32",
+    "build:win64": "nextron build --win --x64"
   },
   "dependencies": {
     "electron-serve": "^1.3.0",
