--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "name": "my-nextron-app",
   "description": "My application description",
-  "version": "1.0.0",
-  "author": "Yoshihide Shiono <shiono.yoshihide@gmail.com>",
+  "version": "0.2",
+  "author": "lufor <lufor_most_cute@163.com>",
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
