增加 在login/加入进入页面

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "my-nextron-app",
+  "name": "terminally-explorer",
   "description": "My application description",
   "version": "0.3.5",
   "author": "lufor <lufor_most_cute@163.com>",
